--- a/app/views/teacher/new_homework.erb
+++ b/app/views/teacher/new_homework.erb
@@ -1,22 +1,23 @@
-<h3 class="center button-spacing">New Homework For <%= @student.name %></h3>
+<h3 class="center button-spacing white-text">New Homework For <%= @student.name %></h3>
 <% if params[:homework].nil? %>
   <div class="row button-spacing">
-    <div class="col s12">
-      <div class="card-panel white hoverable">
+    <div class="col s12 white-text">
+      <div class="card-panel hoverable">
         <form class="" action="/homework/new" method="post">
-          <div class="row">
-            <div class="input-field col s12">
+          <div class="row col s10 offset-s1">
+            <h5 class="h-5-spacing">This weeks homework</h5>
+            <div class="input-field button-spacing">
               <input placeholder="E.g. 'week of july 15th: Circle of 5ths'" id="homework_title" type="text" class="validate" name="title">
               <label class="active" for="homework_title">This weeks homework is called:</label>
             </div>
-            <div class="input-field col s12">
+            <div class="input-field">
               <input placeholder="This week I want to to spend time understanding..." id="lesson_notes" type="text" class="validate" name="note">
               <label class="active" for="lesson_notes">Important notes</label>
             </div>
             <input type="hidden" name="user_id" value="<%= @student.id %>">
           </div>
           <div class="center">
-            <button class="btn waves-effect waves-light button-spacing green" type="submit" name="action" value="submit">
+            <button class="btn waves-effect waves-light form-button green" type="submit" name="action" value="submit">
               Assign!
             </button>
           </div>
@@ -27,33 +28,31 @@
 <% else %>
   <%  unless params[:homework].nil? %>
     <div class="row">
-      <div class="col s12">
-        <div class="card-panel white hoverable">
+      <div class="col s12 white-text">
+        <div class="card-panel hoverable">
           <h5 class="button-spacing"><%= @homework.title %></h5>
           <p><%= @homework.note %></p>
           <br>
           <div class="row">
             <div class="col s12">
-              <div class="card-panel white">
-                <h6><strong>Tasks for this week</strong></h6>
-                <ul class="collection button-spacing">
-                  <% @homework.tasks.map do |task| %>
-                   <li class="collection-item"><%= task.item %>
-                     <% unless task.url == "" || nil %>
-                      <a class="right" href="<%= task.url %>">Resource</a>
-                     <% end %>
-                   </li>
-                  <% end %>
+              <h6><strong>Tasks for this week</strong></h6>
+              <ul class="collection blue-grey darken-3 button-spacing">
+                <% @homework.tasks.map do |task| %>
+                 <li class="collection-item blue-grey darken-3"><%= task.item %>
+                   <% unless task.url == "" || nil %>
+                    <a class="right" href="<%= task.url %>">Resource</a>
+                   <% end %>
+                 </li>
+                <% end %>
                 </ul>
-              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
     <div class="row">
-      <div class="col s12">
-        <div class="card-panel white hoverable">
+      <div class="col s12 white-text">
+        <div class="card-panel hoverable">
           <h5>Add a task!</h5>
           <form class="button-spacing" action="/homework/<%= @homework.id %>/task?user_id=<%= @student.id %>" method="post">
             <div class="row">
@@ -77,7 +76,7 @@
       </div>
     </div>
     <div class="right">
-      <a class="waves-effect waves-light btn green" href="/teacher/students/<%= @student.id %>">Finished</a>
+      <a class="waves-effect waves-light btn green form-button" href="/teacher/students/<%= @student.id %>">Finished</a>
     </div>
   <% end %>
 <% end %>
