--- a/app/views/teacher/new_student.erb
+++ b/app/views/teacher/new_student.erb
@@ -1,21 +1,27 @@
-<h3 class="center h-3-spacing">
+<h3 class="center h-3-spacing white-text">
   Congrats, more business!<br>
-  <span class="title-comment">(and your parents said music was a dumb choice!)</span>
+  <span class="title-comment thin">(and your parents said music was a dumb choice!)</span>
 </h3>
 
 <% if @student.errors.any? %>
-  <div>
-    <strong>Some issues with your entry, please fix them:</strong>
-    <ul>
-      <% @student.errors.full_messages.each do |error| %>
-        <li><%= error %></li>
-      <% end %>
-    </ul>
+  <div class="row">
+    <div class="col s12">
+      <div class="card-panel hoverable thick">
+        <div class="white-text">
+          <h5>Some issues with your entry, please fix them:</h5>
+          <ol>
+            <% @student.errors.full_messages.each do |error| %>
+              <li class="errors-list"><%= error %></li>
+            <% end %>
+          </ol>
+        </div>
+      </div>
+    </div>
   </div>
 <% end %>
 
 <div class="row">
-  <div class="col s12">
+  <div class="col s12 white-text card-bottom">
     <div class="card-panel hoverable">
       <h5 class="center">Add a student</h5>
       <form class="card-padding" method="post" action="/teacher/students">
@@ -32,7 +38,7 @@
           <input type="text" name="password" value="<%= @student.password %>">
         </div>
         <div class="center button-spacing">
-          <button class="btn waves-effect waves-light" type="submit" name="action" value="Create">
+          <button class="btn waves-effect waves-light green" type="submit" name="action" value="Create">
             Submit
             <i class="material-icons right">send</i>
           </button>
