final layout changes

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -10,8 +10,8 @@
           <strong>this app will solve all those problems!</strong>
         </p>
       </div>
-      <div class="card-action center">
-        <a class="waves-effect waves-light amber accent-4 btn-large" href="/signup">Sign Up Here</a>
+      <div class="center">
+        <a class="waves-effect waves-light amber accent-4 btn-large form-button" href="/signup">Sign Up Here</a>
       </div>
     </div>
   </div>
