--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,4 +1,4 @@
-<h1>Where a teacher can signup</h1>
+<h3 class="white-text h-3-spacing center">The Best Decison You'll Ever Make</h3>
 
 <% if @teacher.errors.any? %>
   <!-- <div>
@@ -11,7 +11,7 @@
   </div> -->
   <div class="row">
     <div class="col s12">
-      <div class="card-panel hoverable thick">
+      <div class="card-panel hoverable thick home-card">
         <div class="white-text">
           <h5>Some issues with your entry, please fix them:</h5>
           <ol>
@@ -47,7 +47,7 @@
 <div class="row">
   <div class="col s12 white-text card-bottom">
     <div class="card-panel hoverable">
-      <h5 class="center">Add a student</h5>
+      <h5 class="center">Create an account</h5>
       <form class="card-padding" method="post" action="/signup">
         <div>
           <label>Full Name:</label>
