--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,7 +13,7 @@
 
   <title></title>
 </head>
-<main class="blue-grey darken-3">
+<main class="back-ground">
   <div class="navbar-fixed">
     <nav class="black">
       <div class="container">
