--- a/app/views/teacher/edit_homework.erb
+++ b/app/views/teacher/edit_homework.erb
@@ -31,9 +31,9 @@
           <div class="col s10 offset-s1">
             <h5 class="button-spacing"><strong>Tasks for the homework</strong></h5>
             <div class="button-spacing">
-              <ul class="collection">
+              <ul class="collection blue-grey darken-3">
                 <% @homework.tasks.each do |task| %>
-                  <li class="collection-item">
+                  <li class="collection-item blue-grey darken-3">
                     <div class="input-field col s8">
                       <input id="item<%= task.id %>" type="text" class="validate" name="item<%= task.id %>" value="<%= task.item %>">
                       <label class="active" for="item<%= task.id %>"></label>
