--- a/app/views/teacher/homework.erb
+++ b/app/views/teacher/homework.erb
@@ -1,4 +1,4 @@
-<h3 class="center h-3-spacings white-text"><%= @student.name %>'s homework assignments:</h3>
+<h3 class="center h-3-spacings white-text"><%= @student.name %><span class="thin">'s homework assignments:</span></h3>
 <div class="row">
   <div class="col s6 offset-s2">
     <a class="btn-floating waves-effect waves-light green" href="/teacher/students/<%= @student.id %>/homework/new"><i class="material-icons">assignment</i></a>
@@ -11,7 +11,7 @@
       <div class="col s10 offset-s1 white-text">
         <div class="card-panel hoverable blue-grey darken-4">
           <% unless homework.tasks.where("complete = ? OR complete IS NULL", false).any? == true %>
-              <i class="material-icons right icon-gold">stars</i>
+              <i class="small material-icons right icon-gold">stars</i>
           <% end %>
           <span class="">
             <blockquote class="">
