--- a/app/views/teacher/index.erb
+++ b/app/views/teacher/index.erb
@@ -1,8 +1,8 @@
-<h3 class="center white-text">all of your wonderful students</h3>
+<h3 class="h-3-spacing center white-text">all of your wonderful students</h3>
 <div class="row">
   <div class="col s6 offset-s2">
     <a class="btn-floating waves-effect waves-light green" href="/teacher/students/new"><i class="material-icons">add</i></a>
-    <span class="button-text">Add New Student</span>
+    <span class="button-text white-text">Add New Student</span>
   </div>
 </div>
 <% current_user.students.each do | student | %>
