add styling to new_homework h3

--- a/app/views/teacher/new_homework.erb
+++ b/app/views/teacher/new_homework.erb
@@ -1,4 +1,4 @@
-<h3 class="center button-spacing white-text">New Homework For <%= @student.name %></h3>
+<h3 class="center button-spacing white-text"><span class="thin">New Homework For</span> <%= @student.name %></h3>
 <% if params[:homework].nil? %>
   <div class="row button-spacing">
     <div class="col s12 white-text">
