add styling to h3 and login

--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -39,6 +39,11 @@
           </button>
         </div>
       </form>
+      <div class="white-text thin center">
+        <p>
+          If you are not currently a member, feel free to <a href="/signup">Sign-up!</a>
+        </p>
+      </div>
     </div>
   </div>
 </div>
