--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="/stylesheets/normalize.css">
+    <link rel="stylesheet" href="/stylesheets/application.css">
+    <link type="text/css" rel="stylesheet" href="/stylesheets/materialize.css"  media="screen,projection"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="/javascript/application.js"></script>
+    <script type="text/javascript" src="/javascript/materialize.js"></script>
+
     <title>Muse</title>
     <%= csrf_meta_tags %>
 
@@ -9,6 +20,99 @@
   </head>
 
   <body>
-    <%= yield %>
+    <main class="back-ground">
+    <div class="navbar-fixed">
+      <nav class="black">
+        <div class="container">
+          <div class="nav-wrapper">
+            <a href="/" class="brand-logo">MUSE</a>
+            <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
+            <ul id="nav-mobile" class="right hide-on-med-and-down">
+              <% if not_logged_in %>
+                <li><a class="blue darken-2 btn" href="/login">login</a></li>
+              <% else %>
+                <% if teacher? %>
+                  <li><a href="/teacher/students">STUDENTS</a></li>
+                  <li><a href="/teacher/students/new">ADD STUDENT</a></li>
+                  <li>
+                    <%= link_to "LOGOUT",
+                                session_path,
+                                method: :delete, rel: "nofollow",
+                                class: "blue darken-2 btn" %>
+                  </li>
+                  <li class="nav-username"><%= current_user.name %></li>
+                <% else %>
+                  <li><a href="/student">HOMEWORK</a></li>
+                 
+                  <li>
+                    <%= link_to "LOGOUT",
+                                session_path,
+                                method: :delete, rel: "nofollow",
+                                class: "blue darken-2 btn" %>
+                  </li>
+                  
+
+                  <li class="nav-username"><%= current_user.name %></li>
+                <% end %>
+              <% end %>
+            </ul>
+            <ul class="side-nav" id="mobile-menu">
+              <% if not_logged_in %>
+                <li class="lack"><a href="/login">login</a></li>
+              <% else %>
+                <% if teacher? %>
+                  <li><a href="/teacher/students">STUDENTS</a></li>
+                  <li><a href="/teacher/students/new">ADD STUDENT</a></li>
+                  <li class="blue darken-2">
+                    <%= link_to "LOGOUT",
+                                session_path,
+                                method: :delete, rel: "nofollow" %>
+                  </li>
+                  <li class="nav-username"><%= current_user.name %></li>
+                <% else %>
+                  <li><a href="/student">HOMEWORK</a></li>
+                  <li class="blue darken-2">
+                    <%= link_to "LOGOUT",
+                                session_path,
+                                method: :delete, rel: "nofollow" %>
+                  </li>
+                  <li class="nav-username"><%= current_user.name %></li>
+                <% end %>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </div>
+    <div class="container">
+      <%= yield %>
+    </div>
+    </main>
+    <footer class="page-footer blue-grey darken-4">
+      <div class="container">
+        <div class="row">
+          <div class="col l6 s12">
+            <h5 class="white-text">Why this site!</h5>
+            <p class="grey-text text-lighten-3">This is a great tool for you to learn to KILL it on your instrument</p>
+          </div>
+          <div class="col l4 offset-l2 s12">
+            <h5 class="white-text">Links</h5>
+            <ul>
+              <li>
+                <%= link_to "Logout",
+                  session_path,
+                  method: :delete, rel: "nofollow",
+                  class: "grey-text text-lighten-3" %>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright black">
+        <div class="container">
+          © 2016 Muse Corp
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
