--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,9 @@
                   </li>
                   <li class="nav-username"><%= current_user.name %></li>
                 <% else %>
-                  <li><a href="/student">HOMEWORK</a></li>
+                  <li>
+                    <%= link_to "HOMEWORK", student_homeworks_path %>
+                  </li>
                  
                   <li>
                     <%= link_to "LOGOUT",
