--- a/app/views/teacher/homeworks/index.html.erb
+++ b/app/views/teacher/homeworks/index.html.erb
@@ -1,2 +1,46 @@
-<h1>Teacher::Homeworks#index</h1>
-<p>Find me in app/views/teacher/homeworks/index.html.erb</p>
+<h3 class="center h-3-spacings white-text">
+  <%= @student.name %><span class="thin">'s homework assignments:</span>
+</h3>
+<div class="row">
+  <div class="col s6 offset-s2">
+    <%= link_to new_teacher_student_homework_path(@student),
+                class: "btn-floating waves-effect waves-light green" do %>
+       <i class="material-icons">assignment</i>
+    <% end %>
+    <span class="button-text white-text">give them more work!</span>
+  </div>
+</div>
+<ul>
+  <% @student.homeworks.each do |homework| %>
+    <div class="row">
+      <div class="col s10 offset-s1 white-text">
+        <div class="card-panel hoverable blue-grey darken-4">
+          <% unless homework.tasks.where("complete = ? OR complete IS NULL", false).any? == true %>
+            <i class="small material-icons right icon-gold">stars</i>
+          <% end %>
+          <span class="">
+            <blockquote class="">
+              <h5 class="thin"><%= homework.title %></h5>
+              <p class="thin">
+              <%= homework.note %>
+              </p>
+              <p class="thin">
+              <span class="amber-text thick">
+                <%= homework.tasks.where("complete = ? OR complete IS NULL", false).count %>
+              </span>
+              tasks outstanding
+              </p>
+            </blockquote>
+            <div class="card-action">
+
+              <%= link_to teacher_student_homework_path(@student, homework), class: "thin" do %>
+                View Homework
+                <i class="material-icons right">send</i>
+              <% end %>
+            </div>
+          </span>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</ul>
