--- a/app/views/teacher/students/new.html.erb
+++ b/app/views/teacher/students/new.html.erb
@@ -24,26 +24,26 @@
   <div class="col s12 white-text card-bottom">
     <div class="card-panel hoverable">
       <h5 class="center">Add a student</h5>
-      <form class="card-padding" method="post" action="/teacher/students">
+      <%= form_for @student, url: teacher_students_path(@student), class: "card-padding" do |f| %>
         <div>
-          <label>Student Name:</label>
-          <input type="text" name="name" value="<%= @student.name %>">
+          <%= f.label "Student Name:" %>
+          <%= f.text_field :name %>
         </div>
         <div>
-          <label>Username:</label>
-          <input type="text" name="username" value="<%= @student.username %>">
+          <%= f.label "Username:" %>
+          <%= f.text_field :username %>
         </div>
         <div>
-          <label>Password:</label>
-          <input type="text" name="password" value="<%= @student.password %>">
+          <%= f.label "Password:" %>
+          <%= f.password_field :password %>
         </div>
         <div class="center button-spacing">
-          <button class="btn waves-effect waves-light green" type="submit" name="action" value="Create">
+          <%= button_tag class: "btn waves-effect waves-light green" do %>
             Submit
             <i class="material-icons right">send</i>
-          </button>
+          <% end %>
         </div>
-      </form>
+      <% end %>
     </div>
   </div>
 </div>
