Add basic show page for the parent's view

--- a/app/views/parent/children/show.html.erb
+++ b/app/views/parent/children/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Parent::Children#show</h1>
-<p>Find me in app/views/parent/children/show.html.erb</p>
+<h1>Welcome <%= @parent.name %>!</h1>
+<ul>
+  <% @child.homeworks.each do |homework| %>
+    <li><%= link_to homework.title, parent_child_homework_path(@child, homework) %></li>
+  <% end %>
+</ul>
+
